# LearnDX12

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/Common/: Common.hpp  NixApplication.h  NixApplication.hpp
Source/DX12Samples/: CMakeLists.txt
Source/DX12Samples/DX12Ocean/: CMakeLists.txt  Device.cpp  Device.hpp  SimluatorApp.cpp  SimluatorApp.hpp  Waves.cpp  Waves.hpp
Source/DX12Samples/DX12Test/: CMakeLists.txt  HelloDX12.cpp  HelloDX12.h
Source/DX12Samples/DX12Triangle/: CMakeLists.txt  HelloTriangle.cpp  HelloTriangle.h
Source/DX12Samples/DX12TriangleColor/: CMakeLists.txt  HelloTriangleColor.cpp  HelloTriangleColor.h
Source/DX12Samples/DX12TriangleDelux/: CMakeLists.txt  TriangleDelux.cpp  TriangleDelux.h
Source/DX12Samples/DX12WaterWave/: CMakeLists.txt  Device.cpp  Device.hpp  WaterWave.cpp  WaterWave.hpp  Waves.cpp
Source/DX12Samples/OceanFFT/: CMakeLists.txt  OceanFFT.cpp  OceanFFT.hpp  Waves.cpp
Source/DX12Samples/OceanNew/: CMakeLists.txt  Device.hpp  OceanNew.cpp  OceanNew.hpp
Source/DX12Samples/Shapes/: CMakeLists.txt  Device.cpp  Device.hpp  Shapes.cpp  Shapes.hpp
Source/Platform/Windows/WinMain/: Resource.h  WinMain.cpp  stdafx.h  targetver.h
Source/ThirdPart/: CMakeLists.txt
Source/ThirdPart/Nix/: CMakeLists.txt
Source/ThirdPart/Nix/IO/: Archive.cpp  Archive.h
Source/ThirdPart/Nix/Math/: MathHelper.cpp  MathHelper.h
Source/ThirdPart/Nix/Memory/: BuddySystemAllocator.cpp
Source/ThirdPart/Nix/String/: Encoding.cpp  Encoding.h  Path.cpp  Path.h
Source/ThirdPart/Nix/Timer/: Timer.cpp  Timer.h
Source/ThirdPart/Nix/Utility/: ConstantObject.cpp  ConstantObject.hpp  FrameResource.hpp  GeometryGenerator.cpp  GeometryGenerator.hpp  MeshGeometry.cpp  MeshGeometry.hpp  PassConstants.cpp  PassConstants.hpp  RenderItem.cpp  RenderItem.hpp  Vertex.hpp
Source/ThirdPart/Nix/Utils/: UploadBuffer.hpp  Utils.cpp  Utils.hpp
Source/Utility/: CMakeLists.txt  ConstantObject.hpp  FrameResource.cpp  FrameResource.hpp  GeometryGenerator.cpp  GeometryGenerator.hpp  MeshGeometry.cpp  MeshGeometry.hpp  PassConstants.hpp  RenderItem.hpp  Vertex.hpp
